# mojoAL

./: CMakeLists.txt
src/: CMakeLists.txt  mojoal.c
